# Toy-Project--Deep-Learning-Playground

./: .gitignore  README.md  env.sh  pyproject.toml  test.ps1  test.sh
_examples/messy/: preprocess.py
_examples/messy/dataset/: synthetic_messy_dataset.csv  synthetic_messy_dataset_schema.csv
dlplay/: histories.py  output_collectors.py  pretrain_loaders.py
dlplay/dlplay/loss/: __init__.py  base.py
dlplay/dlplay/metrics/: __init__.py
dlplay/dlplay/models/: base.py
dlplay/metrics/: base.py
dlplay/models/: __init__.py
dlplay/tabular_preprocess/: clean.py  printer.py  to_csv_for_pandas.py
